# atomic-server

./: .dockerignore  .earthlyignore  .gitignore  @memories.md  AGENTS.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_REVIEW_POSTMORTEM.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  DIDS-DRIVES-ROUTING.md  FINAL_TEST_REPORT.md  LORO_MIGRATION_PLAN.md  PERFORMANCE_PLAN.md  PERFORMANCE_REPORT.md  README.md  RECOVERY_README.md  RECOVERY_REPORT.txt  SIMPLIFICATION_DELTA.md  SIMPLIFICATION_PLAN.md  TESTING_REPORT.md  TEST_FIX_PLAN.md  TEST_STATUS.md  UNIFIED_DATA_LAYER.md  check_out.txt  coll_diag.txt  dagger.json  debug-auth-flow.sh  debug-prune-endpoint.sh  env_dates  fix-agents-proper.sh  fix-agents.sh  lessons-learned.md  memories.md  opencode.json  patch.diff  performance_test.rs  run-all-tests.sh  run-local-e2e-tests.sh  (+12 more)
.claude/: settings.local.json
.config/: nextest.toml
.dagger/: .gitattributes  package.json  pnpm-lock.yaml
.opencode/: README.md
.zed/: settings.json  tasks.json
RECOVERY-schema-feature/: missing_types.ts  store_methods_block.partial.ts
atomic-plugin/: CONTRIBUTING.md  Cargo.toml  README.md
atomic-plugin/src/: bin.rs  bindings.rs  lib.rs  packaging.rs
atomic-plugin/wit/: class-extender.wit
browser/: .eslintrc.cjs  .gitignore  .oxfmtrc.json  .oxlintrc.json  .oxlintrc.lint.json  .prettierignore  .prettierrc.json  CHANGELOG.md  CONTRIBUTING.md  Earthfile  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-overrides.json  tsconfig.build.json  tsconfig.json  typedoc.json
cli/: Cargo.toml  README.md
cli/src/: commit.rs  get.rs  main.rs  new.rs  path.rs  print.rs  search.rs
cli/tests/: tests.rs
desktop/: .gitignore  Cargo.toml  README.md  tauri.conf.json  zed backup settings.json
desktop/.cargo/: config.toml
desktop/icons/: icon.icns
desktop/src/: build.rs  lib.rs  main.rs  menu.rs  system_tray.rs
docs/: .gitignore  book.toml  deployment-cloudflare-d1.md  deployment-cloudflare-tunnel.md  deployment-custom-docker.md  deployment-docker-compose.md  deployment-fly-io.md  deployment-overview.md  deployment-railway.md  deployment-turso-performance.md  deployment-turso.md
flutter/: .gitignore  .mise.toml  AGENTS.md  Makefile  README.md  connect-tablet.sh  dev.sh  pubspec.yaml  web_proxy.dart  web_proxy.sh
flutter/rust/: Cargo.toml
flutter/rust/src/: frb_generated.rs
flutter/rust/src/api/: simple.rs
flutter/rust/src/api/simple/: state.rs  types.rs  ws_sync.rs
lib/: Cargo.toml
lib/benches/: benchmarks.rs  loro_bench.rs  populate_bench.rs  query_subscription_bench.rs
lib/defaults/: ai.json  default_base_models.json  default_store.json  ontologies.json  plugins.json  table.json
lib/examples/: basic.rs  try_path.rs  try_query.rs
lib/src/: agents.rs  atoms.rs  authentication.rs  class_extender.rs  collections.rs  commit.rs  config.rs  datatype.rs  db.rs  dht.rs  discovery.rs  drive.rs  endpoints.rs  errors.rs  frozen.rs  genesis.rs  hierarchy.rs  lib.rs  loro.rs  metrics.rs  parse.rs  populate.rs  resources.rs  schema.rs  search_sqlite.rs  serialize.rs  similarity.rs  store.rs  storelike.rs  subject.rs  test_utils.rs  urls.rs  utils.rs  validate.rs  values.rs
lib/src/client/: connected.rs  helpers.rs  mod.rs  search.rs  ws.rs
lib/src/db/: btreemap_store.rs  encoding.rs  kv_store.rs  migrations.rs  opfs_backend.rs  plugin_meta.rs  prop_val_sub_index.rs  query_index.rs  redb_store.rs  sled_store.rs  test.rs  tests_sqlite_config.rs  trees.rs  v1_types.rs  v2_types.rs  val_prop_sub_index.rs
lib/src/plugins/: bookmark.rs  chatroom.rs  collections.rs  defaults.rs  importer.rs  invite.rs  mod.rs  path.rs  prunetests.rs  query.rs  search.rs  versioning.rs  wasm.rs
lib/src/stores/: mod.rs  turso.rs  turso_security_tests.rs  turso_tests.rs
lib/src/sync/: engine.rs  iroh_e2e.rs  mod.rs  peer.rs  policy.rs  protocol.rs  tests.rs  tombstones.rs  ws_apply.rs
lib/tests/: drive_rights.rs  perf_probe.rs
planning/: README.md  SDK-API-design.md  arc-actor-message-payloads.md  atomic-lib-runtime.md  authorization-sync.md  canvas-undo-consolidation.md  cleanup-update-encoding.md  cloud-sync-managed-node.md  commit-fanout-drive-isolation.md  commit-retention-and-state-certificates.md  connection-close-cleanup.md  drop-query-update.md  (+32 more)
plugin-examples/random-folder-extender/: Cargo.toml  README.md  plugin.json
plugin-examples/random-folder-extender/assets/: config.toml
plugin-examples/random-folder-extender/src/: bindings.rs  lib.rs
plugin-examples/random-folder-extender/wit/: world.wit
server/: Cargo.toml  build.rs
server/debian/: atomic-server.env  atomic-server.service  postinst
server/src/: actor_messages.rs  appstate.rs  bin.rs  commit_monitor.rs  config.rs  config.rs.orig  context.rs  db_writer.rs  dht.rs  errors.rs  helpers.rs  https.rs  invite_token.rs  iroh_transport.rs  lib.rs  loro_sync_broadcaster.rs  metrics.rs  node.rs  routes.rs  saas.rs  search.rs  serve.rs  tests.rs  trace.rs  vector_search.rs  y_awareness_broadcaster.rs  y_sync_broadcaster.rs
server/src/handlers/: blob.rs  commit.rs  download.rs  export.rs  frozen.rs  get_resource.rs  image.rs  mod.rs  plugin_ui.rs  post_resource.rs  search.rs  single_page_app.rs  upload.rs  vector_search.rs  web_sockets.rs  ws_v2.rs
server/src/plugins/: bookmark.rs  chatroom.rs  collections.rs  did.rs  drive.rs  export.rs  files.rs  importer.rs  invite.rs  mod.rs  path.rs  plugin.rs  prunetests.rs  query.rs  search.rs  setup.rs  vector_search.rs  versioning.rs  wasm.rs
server/src/vector_search/: common.rs  enabled.rs  fastembed_gpu.rs  mod.rs  stub.rs  table.rs
server/src/vector_search/embeddings/: local.rs  mod.rs  openrouter.rs  stub.rs
server/tests/: blob_sync.rs  dht_resolve.rs  loro_ephemeral_sync.rs  multi_client_sync.rs  query_subscribe.rs  server-cli.rs  sync.rs  test_storage_config.rs  turso_integration.rs  ws_commit.rs  ws_commit_isolation.rs  ws_destroy.rs  ws_drive_membership.rs  ws_get.rs  ws_get_unauthorized_latency.rs  ws_subscribe_query.rs
server/wit/: class-extender.wit
wasm/: Cargo.toml
wasm/src/: lib.rs
(+2806 files in other folders)
