[package]
name = "atomic-plugin"
version = "0.1.1"
edition = "2021"
description = "Helper library for building Atomic Data class extender plugins in Wasm"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { version = "0.48.1", features = ["realloc", "macros"] }
wit-bindgen-rt = "0.44.0"
