[package]
name = "atomic-plugin"
version = "0.1.1"
edition = "2021"
description = "Helper library for building Atomic Data class extender plugins in Wasm"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = { version = "0.48.1", features = ["realloc", "macros"] }
wit-bindgen-rt = "0.44.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5", features = ["derive"] }
zip = "0.6"
anyhow = "1.0"
walkdir = "2"

[[bin]]
name = "atomic-plugin"
path = "src/bin.rs"
