[package]
authors = ["Joep Meindertsma <joep@argu.co>"]
description = "CLI tool to create, store, query, validate and convert Atomic Data"
edition = "2021"
license = "MIT"
name = "atomic-cli"
readme = "README.md"
repository = "https://github.com/atomicdata-dev/atomic-server"
homepage = "https://atomicserver.eu/"
version = "0.40.0"

[dependencies]
atomic_lib = { version = "0.40.0", path = "../lib", features = [
    "config",
    "rdf",
] }
base64 = "0.21"
clap = { version = "4", features = ["cargo", "derive"] }
colored = "2"
dirs = "4"
edit = { version = "0.1", optional = true }
promptly = "0.3"
regex = "1"

[dev-dependencies]
assert_cmd = "2"

[features]
default = ["native"]
# Non-wasi interface. These features cannot be compiled to WASI.
native = ["edit"]

[package.metadata.deb]
maintainer = "Joep Meindertsma <joep@ontola.io>"
copyright = "2020-2025, Joep Meindertsma"
extended-description = "Atomic CLI - A command-line interface for headless CMS and real-time databases."
license-file = ["../LICENSE", "0"]
depends = "$auto"
section = "web"
priority = "optional"
assets = [
    ["../target/arm-unknown-linux-gnueabihf/dietpi/atomic-cli", "/usr/bin/atomic-cli", "755"],
]
