[package]
authors = ["joep@ontola.io"]
build = "src/build.rs"
description = "Atomic Server - Tauri desktop"
edition = "2021"
license = "MIT"
name = "atomic-server-tauri"
repository = "https://github.com/atomicdata-dev/atomic-server"
version = "0.36.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
actix-rt = "2.6.0"
clap = "4"
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

[dependencies.atomic-server]
# We don't need HTTPS for desktop usage
default-features = false
path = "../server"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[lib]
name = "atomic_server_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "atomic-server-tauri"
path = "src/main.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
