[package]
authors = ["Joep Meindertsma <joep@argu.co>"]
description = "Library for creating, storing, querying, validating and converting Atomic Data."
edition = "2021"
license = "MIT"
name = "atomic_lib"
readme = "README.md"
repository = "https://github.com/atomicdata-dev/atomic-server"
version = "0.40.0"


[dependencies]
base64 = "0.22"
rmp-serde = { version = "1.3.1", optional = true }
# Needed for migration to messagepack
bincode1 = { package = "bincode", version = "1", optional = true }
directories = { version = "6", optional = true }
rand = { version = "0.8" }
regex = "1"
hex = "0.4"
ring = { version = "0.17", optional = true }
iroh = { version = "0.35", optional = true, features = [
  "discovery-local-network",
] }
pkarr = { version = "3.10", default-features = false, features = [
  "relays",
  "keys",
  "signed_packet",
], optional = true }
anyhow = { version = "1", optional = true }
futures = "0.3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rio_api = { version = "0.8.6", optional = true }
rio_turtle = { version = "0.8.6", optional = true }
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.2"
serde_json = "1"
sled = { version = "0.34", optional = true, features = ["no_logs"] }
redb = { version = "4.1.0", optional = true }
toml = { version = "1.1.2", optional = true }
tracing = "0.1"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json"] }
url = "2"
urlencoding = "2"
ulid = "1.2.1"
loro = "1.12.0"
blake3 = "1.8.5"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync"] }
async-trait = "0.1.89"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"], optional = true }

# For WASM: enable JS-backed randomness via feature unification
getrandom = { version = "0.4.2", features = ["wasm_js"], optional = true }
js-sys = { version = "0.3.99", optional = true }
wasm-bindgen = { version = "0.2.122", optional = true }
wasm-bindgen-futures = { version = "0.4.72", optional = true }
web-sys = { version = "0.3.99", optional = true, features = ["FileSystemDirectoryHandle", "FileSystemFileHandle", "FileSystemGetFileOptions", "FileSystemSyncAccessHandle", "FileSystemReadWriteOptions", "StorageManager", "WorkerGlobalScope", "WorkerNavigator"] }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio"] }
iai = "0.1"
lazy_static = "1"
ntest = "0.9.5"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.23", features = ["registry"] }
tokio = { version = "1.52.3", features = ["rt", "macros"] }

[dependencies.opentelemetry]
optional = true
version = "0.32"

[features]
config = ["directories", "toml"]
## Core Db with encoding support (BTreeMapStore included).
## Does NOT pull in sled — works in WASM.
db = ["rmp-serde"]
## Db with redb backend (works in WASM with InMemoryBackend, future OPFS).
db-redb = ["db", "redb"]
## Full Db with sled backend and migrations. Implies `db`.
## Does NOT work in WASM.
db-sled = ["db", "sled", "bincode1"]
discovery = ["dep:pkarr"]
iroh = ["dep:iroh", "anyhow"]
## WebSocket client. Depends on `db` for the v2 binary protocol (`sync::protocol`).
ws = ["tokio-tungstenite", "db"]
rdf = ["rio_api", "rio_turtle"]
telemetry = ["opentelemetry"]
## Enable JS-backed randomness, time, and OPFS for WASM targets.
wasm = [
  "getrandom/wasm_js",
  "getrandom",
  "js-sys",
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "web-sys",
]
rmp-serde = ["dep:rmp-serde"]
directories = ["dep:directories"]
ring = ["dep:ring"]
anyhow = ["dep:anyhow"]
rio_api = ["dep:rio_api"]
rio_turtle = ["dep:rio_turtle"]
getrandom = ["dep:getrandom"]
js-sys = ["dep:js-sys"]
wasm-bindgen = ["dep:wasm-bindgen"]
wasm-bindgen-futures = ["dep:wasm-bindgen-futures"]
web-sys = ["dep:web-sys"]
opentelemetry = ["dep:opentelemetry"]
redb = ["dep:redb"]
toml = ["dep:toml"]
tokio-tungstenite = ["dep:tokio-tungstenite"]

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "loro_bench"
harness = false

[[bench]]
name = "populate_bench"
harness = false
required-features = ["db-redb"]

[[bench]]
name = "query_subscription_bench"
harness = false
required-features = ["db-redb"]
