[package]
authors = ["Joep Meindertsma <joep@argu.co>"]
description = "Library for creating, storing, querying, validating and converting Atomic Data."
edition = "2021"
license = "MIT"
name = "atomic_lib"
readme = "README.md"
repository = "https://github.com/atomicdata-dev/atomic-server"
version = "0.40.0"


[dependencies]
base64 = "0.21"
rmp-serde = { version = "1.3.0", optional = true }
# Needed for migration to messagepack
bincode1 = { package = "bincode", version = "1", optional = true }
directories = { version = ">= 2, < 5", optional = true }
rand = { version = "0.8" }
regex = "1"
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rio_api = { version = "0.8", optional = true }
rio_turtle = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.1.0"
serde_json = "1"
sled = { version = "0.34", optional = true, features = ["no_logs"] }
toml = { version = "0.8", optional = true }
tracing = "0.1"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json"] }
mainline = { version = "6", optional = true }
sha1 = { version = "0.10", optional = true }
url = "2"
urlencoding = "2"
ulid = "1.1.3"
loro = "1.10.8"
tokio = { version = "1", features = [
  "rt",
  "macros",
  "sync",
  "rt-multi-thread",
] }
async-trait = "0.1.89"
futures = "0.3.31"
tokio-tungstenite = { version = "0.26", features = ["native-tls"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
iai = "0.1"
lazy_static = "1"
ntest = "0.9"

[dependencies.opentelemetry]
optional = true
version = "0.31"

[features]
config = ["directories", "toml"]
db = ["sled", "rmp-serde", "bincode1"]
dht = ["mainline", "sha1"]
ws = ["tokio-tungstenite"]
rdf = ["rio_api", "rio_turtle"]
telemetry = ["opentelemetry"]
