[package]
authors = ["Joep Meindertsma <joep@ontola.io>"]
default-run = "atomic-server"
description = "Create, share and model Atomic Data with this graph database server. Run atomic-server without any arguments to start the server. Use --help to learn about the options."
edition = "2021"
homepage = "https://atomicserver.eu/"
include = ["src/**/*", "Cargo.toml", "assets_tmp", "build.rs"]
license = "MIT"
name = "atomic-server"
readme = "./README.md"
repository = "https://github.com/atomicdata-dev/atomic-server"
version = "0.40.2"

[[bin]]
name = "atomic-server"
path = "src/bin.rs"
test = false

[build-dependencies]
brotli = "8"
dircpy = "0.3.20"
static-files = "0.3.1"
walkdir = "2"

[dependencies]
async-trait = "0.1.89"
actix = "0.13.5"
actix-cors = "0.7.1"
actix-files = "0.6.10"
actix-multipart = "0.7.2"
actix-web-actors = "4.3.1"
base64 = "0.22"
chrono = "0.4.44"
colored = "3.1.1"
dialoguer = "0.12"
directories = "6"
dotenv = "0.15"
futures = "0.3.32"
percent-encoding = "2.3.2"
regex = "1.12.3"
rio_api = "0.8.6"
rio_turtle = "0.8.6"
sanitize-filename = "0.6"
serde_json = "1"
serde_jcs = "0.2"
serde_with = "3.20"
simple-server-timing-header = "0.1"
static-files = "0.3.1"
tantivy = "0.26.1"
tracing = "0.1.44"
tracing-chrome = "0.7.2"
tracing-log = "0.2"
ureq = "3.3.0"
urlencoding = "2"
ring = "0.17.14"
wasmtime = { version = "45.0.0", optional = true, features = [
  "component-model",
] }
wasmtime-wasi = { version = "45.0.0", optional = true, features = ["p2"] }
wasmtime-wasi-http = { version = "45.0.0", optional = true }
url = "2.5.8"
html2md = "0.2.15"
kuchikiki = "0.8.2"
indexmap = { version = "2.14.0", features = ["std"] }
lol_html = "2.9"
zip = { version = "8.6.0", optional = true }
reqwest = { version = "0.13.3", default-features = false, features = [
  "rustls",
  "json",
  "stream",
] }
mainline = "6.2.0"
sha1 = "0.11"
blake3 = "1.8.5"
hex = "0.4"
local-ip-address = "0.6.13"
anyhow = "1"
actix-web-static-files = { version = "4.1.1", features = ["static-files-03"] }
rand = "0.8.6"
fastembed = { version = "5", optional = true }
text-splitter = { version = "0.29.3", optional = true, features = ["markdown"] }
lancedb = { version = "0.26.2", optional = true }
arrow = { version = "57.3.0", optional = true }
ort = { version = "2.0.0-rc.11", optional = true, features = [
  "coreml",
  "cuda",
  "directml",
] }

[dependencies.instant-acme]
optional = true
version = "0.8.5"

[dependencies.rustls-pemfile]
optional = true
version = "2.2"

[dependencies.rcgen]
optional = true
version = "0.14.8"

[dependencies.tonic]
optional = true
version = "0.14.6"
features = ["tls-ring", "tls-native-roots"]

[dependencies.tracing-opentelemetry]
optional = true
version = "0.33"

[dependencies.opentelemetry]
optional = true
version = "0.32"

[dependencies.opentelemetry-otlp]
optional = true
version = "0.32"

[dependencies.opentelemetry_sdk]
optional = true
version = "0.32"

[dependencies.opentelemetry-appender-tracing]
optional = true
version = "0.32"

[dependencies.tracing-actix-web]
version = "0.7.21"

[dependencies.actix-web]
features = ["rustls-0_23"]
version = "4.13.0"

[dependencies.atomic_lib]
features = ["config", "db-redb", "rdf", "discovery", "iroh", "ring"]
path = "../lib"
version = "0.40.0"

[dependencies.clap]
features = ["derive", "env", "cargo"]
version = "4.6.1"

[dependencies.rustls]
optional = true
version = "0.23"
features = ["ring"]

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tokio]
features = ["time"]
version = "1.52.3"

[dependencies.image]
optional = true
version = "0.25.10"

[dependencies.webp]
optional = true
version = "0.3.1"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.23"

[dev-dependencies]
actix-rt = "2.11.0"
assert_cmd = "2.2.2"
mainline = "6.2.0"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "json",
  "multipart",
] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["full"] }
portpicker = "0.1"
atomic_lib = { path = "../lib", features = ["ws"] }
blake3 = "1.8.5"
tokio-tungstenite = { version = "0.29.0", features = [
  "rustls-tls-native-roots",
] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
futures-util = "0.3.32"

[features]
# Embedded builds: cargo build -p atomic-server --no-default-features --features <needed>
default = ["https", "telemetry", "img", "wasm-plugins", "vector-search"]
light = ["https"]
telemetry = [
  "tracing-opentelemetry",
  "opentelemetry",
  "opentelemetry-otlp/trace",
  "opentelemetry-otlp/logs",
  "opentelemetry-otlp/metrics",
  "opentelemetry-otlp/grpc-tonic",
  "opentelemetry-otlp/tls", # enable TLS for gRPC
  "opentelemetry-otlp/tls-roots", # system trust roots (needed for SigNoz cloud)
  "opentelemetry-otlp/internal-logs", # surface OTel SDK errors via tracing/log
  "tonic",
  "rustls",
  "opentelemetry_sdk",
  "opentelemetry_sdk/rt-tokio",
  "opentelemetry_sdk/logs",
  "opentelemetry_sdk/metrics",
  "opentelemetry-appender-tracing",
  "atomic_lib/telemetry",
]
img = ["webp", "image"]
https = ["rustls", "instant-acme", "rcgen", "rustls-pemfile"]
wasm-plugins = ["wasmtime", "wasmtime-wasi", "wasmtime-wasi-http", "zip"]
image = ["dep:image"]
tonic = ["dep:tonic"]
tracing-opentelemetry = ["dep:tracing-opentelemetry"]
wasmtime = ["dep:wasmtime"]
wasmtime-wasi = ["dep:wasmtime-wasi"]
wasmtime-wasi-http = ["dep:wasmtime-wasi-http"]
webp = ["dep:webp"]
zip = ["dep:zip"]
vector-search = [
  "dep:fastembed",
  "dep:text-splitter",
  "dep:lancedb",
  "dep:arrow",
  "dep:ort",
]
fastembed = ["dep:fastembed"]
text-splitter = ["dep:text-splitter"]
lancedb = ["dep:lancedb"]
arrow = ["dep:arrow"]
ort = ["dep:ort"]

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"

[lib]
name = "atomic_server_lib"
path = "src/lib.rs"
