[package]
name = "atomic-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM bindings for Atomic Data client-side database"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
atomic_lib = { path = "../lib", features = ["db-redb", "wasm"], default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
