[package]
name = "rust_lib_atomiccanvas_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
getrandom = { version = "0.3", features = ["wasm_js"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-android = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atomic_lib = { path = "../../lib", default-features = false, features = ["db-redb", "iroh", "discovery"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
atomic_lib = { path = "../../lib", default-features = false, features = ["db-redb", "wasm"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
