[package]
name = "random-folder-extender"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
atomic-plugin = { path = "../../atomic-plugin" }
rand = { version = "0.8", features = ["std", "std_rng"] }
serde_json = "1"

[package.metadata.component]
package = "atomic:class-extender"
