[package]
name = "random-folder-extender"
version = "0.1.0"
edition = "2021"

[lib]
# This is important for the Wasm build.
crate-type = ["cdylib"]

[dependencies]
atomic-plugin = { path = "../../atomic-plugin" }
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"
url = "2.5.8"
waki = "0.5.1"
